# av-pedestrian-diffusion-mppi

./: .gitignore  LICENSE  README.md  adapt_requirements.text  check_torch_cuda.py  frames_2026-05-06_17.02.06.gv  requirements.txt  ros2_nodes_todo.txt  run_foxglove_bridge.sh  run_gnss_pub.sh  run_rosbridge_websocket.sh
docs/: PROJECT.md  TODO.md  adapt_design.md  adapt_requirements.text  cs588_requirements.txt  diffusion_instructions.txt  diffusion_predictor_training.md  mid_report.tex
models/diffusion/av2_joint_v1/: ema_best.pt  ema_final.pt
models/diffusion/av2_pretrain_v1/: ema_best.pt  ema_final.pt
ped_run/: metadata.yaml
src/adapt_full/: package.xml  setup.cfg  setup.py
src/adapt_full/adapt_full/: adapt_camera_position.py  adapt_high_level_command.py  adapt_lidar_camera_fusion.py  adapt_lidar_processing.py  adapt_pedestrian_aware_path.py  adapt_stanley_controller.py  adapt_straight_path.py
src/adapt_full/config/: e2_safety.yaml  e4_safety.yaml  high_level_decision_params.yaml  lidar_params.yaml  pedestrian_aware_params.yaml  sensor_fusion_params.yaml  stanley_controller_params.yaml  straight_path_params.yaml
src/adapt_full/launch/: adapt_full_launch.py  adapt_mppi_launch.py  adapt_prediction_launch.py  high_level_command_launch.py  lidar_camera_fusion_launch.py  lidar_preprocessing_launch.py  lidar_rgb_tracking_launch.py  pedestrian_aware_path_launch.py  safety_controller_launch.py  stanley_controller_launch.py  straight_path_launch.py
src/basic_launch/config/e4/robot_localization/: ekf.yaml
src/basic_launch/launch/: robot_localization.launch.py  sensor_init.launch.py
src/basic_launch/rviz/: gem_e4.rviz
src/detected_object_msgs/: CMakeLists.txt  package.xml
src/detected_object_msgs/msg/: DetectedObject.msg
src/diffusion_prediction/: .gitignore  diffusion_instructions.txt  package.xml  setup.cfg  setup.py  train
src/diffusion_prediction/diffusion_prediction/: dataset.py  dataset_joint.py  ddpm.py  eval.py  finetune.py  infer_node.py  model.py  model_joint.py  tracker.py  train.py  train_joint.py  utils.py
src/diffusion_prediction/launch/: diffusion.launch.py
src/diffusion_prediction/scripts/: DEMO.md  analyze_smoothness.py  bench_latency.py  demo_live.py  diagnose_samples.py  extract_gem_windows.py  finetune_eth_ucy.py  preprocess_av2.py  preprocess_av2_joint.py  preprocess_eth_ucy.py  preprocess_sdd_and_synth.py  visualize.py
src/gem_perception/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
src/gem_perception/config/: perception.yaml  perception_real_e4.yaml
src/gem_perception/docs/: overview.md  real_car_checklist.md  real_car_deploy.md
src/gem_perception/gem_perception_ros2/: bev_overlay_node.py  download_models.py  geometry.py  map_tf_broadcaster.py  pipeline.py  ros_common.py  sam_detector.py  yolo_detector.py
src/gem_perception/launch/: perception_real_e4.launch.py  perception_sam.launch  perception_yolo.launch
src/gem_perception/ros2/: README.md  package.xml  setup.py
src/gem_perception/ros2/config/: perception_real_e4.yaml
src/gem_perception/ros2/gem_perception_ros2/: geometry.py  map_tf_broadcaster.py  pipeline.py  sam_detector.py  sam_perception_node.py  yolo_perception_node.py
src/gem_perception/ros2/launch/: perception_sam.launch.py  perception_yolo.launch.py
src/gem_perception/ros2/rviz/: perception.rviz
src/gem_perception/rviz/: perception.rviz
src/gem_perception/scripts/: bev_overlay_node.py  download_models.py  map_tf_broadcaster.py  sam_perception_node.py  yolo_perception_node.py
src/gem_perception/src/gem_perception/: ros_common.py
src/vehicle_drivers/gem_mppi_control/: mppi_ros.py  mppi_t.py
src/vehicle_drivers/mppi_controller/: package.xml  setup.py
src/vehicle_drivers/mppi_controller/launch/: adapt_phase1.launch.py
src/vehicle_drivers/mppi_controller/mppi_controller/: __init__.py  adapt_mppi_generic_node.py  adapt_mppi_node.py  bicycle_model.py  mppi.py  mppi_planner_node.py  pacmod_bridge_node.py  reference_path.py
src/vehicle_drivers/mppi_controller/rviz/: adapt_main.rviz
src/vehicle_drivers/mppi_controller/test/: test_phase1.py
src/yolo_person_detector/: README.md  package.xml  requirements.txt  setup.py
src/yolo_person_detector/rviz/: perception.rviz
src/yolo_person_detector/yolo_person_detector/: pedestrian_behaviour_predictor.py  rgbd_pedestrian_detector.py
