<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffusion_prediction</name>
  <version>0.1.0</version>
  <description>
    Conditional diffusion model for pedestrian trajectory prediction.
    Drop-in replacement for the constant-velocity predictor.
    Pretrained on Argoverse 2 Motion Forecasting (CC-BY 4.0)
    with optional GEM-rosbag finetune.
  </description>
  <maintainer email="sunnydeshpande9900@gmail.com">Sunny Deshpande</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pacmod2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
