<?xml version="1.0"?>
<package format="3">
  <name>gem_perception</name>
  <version>0.1.0</version>
  <description>
    Text-promptable 2D detection/segmentation (YOLO-World or LangSAM) fused
    with LiDAR to publish a goal PoseStamped in map and base_link frames.
  </description>
  <maintainer email="ogawa3@illinois.edu">ACRL</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>septentrio_gnss_driver</exec_depend>

  <export>
  </export>
</package>
