<?xml version="1.0"?>
<package format="3">
  <name>gem_perception_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 (jazzy) text-promptable perception fusing camera + LiDAR → goal pose.</description>
  <maintainer email="ogawa3@illinois.edu">ACRL</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
