<?xml version="1.0"?>
<package format="3">
  <name>mppi_controller</name>
  <version>0.1.0</version>
  <description>Adapt MPPI motion planner — replaces AutoShield's Stanley controller on the GEM e4.</description>
  <maintainer email="sunny@example.com">Sunny Deshpande</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pacmod2_msgs</depend>
  <depend>septentrio_gnss_driver</depend>
  <depend>ament_index_python</depend>
  <exec_depend>adapt_full</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
